# mathematics-of-statistical-machine-learning

./: pyproject.toml
chap01/: chap01.ipynb
