[tool.poetry]
name = "mathematics-of-statistical-machine-learning"
version = "0.1.0"
description = ""
authors = ["kmotohas <kazuki.motohashi@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipykernel = "^5.2.1"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
japanize_matplotlib = "^1.1.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
